Added userlists.py and edited home.html
